--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="icon" href="./sources/images/reflection_logo.webp">
-    <meta name="description" content="Reflection car care in rak | PPF | PDR | tinting | Smart paint | Rim Repair | Ceramic Coating">
+    <meta name="description" content="Reflection car care in rak | Paint Protection film (ppf)| Paintless Dent Removal (pdr) | tinting | Smart paint | Rim Repair | Ceramic Coating">
     <link rel="stylesheet" href="./style.css">
     <title>Reflection car care</title>
 </head>
@@ -194,7 +194,7 @@
     
     <div class="container">
         <div class="head">
-            <h1>over 2  years of experience</h1>
+            <h1>over <span id="year"></span>  years of experience</h1>
         </div>
         <div class="row">
             
