--- a/arabic page/arabic.html
+++ b/arabic page/arabic.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://unpkg.com/scrollreveal"></script>
     <link rel="icon" href="../sources/images/reflection_logo.webp">
-    <meta name="description" content="Reflection car care in rak | PPF | PDR | tinting | Smart paint | Rim Repair | Ceramic Coating">
+    <meta name="description" content=" ريفليكشن  للعناية بالسيارات في رأس الخيمة | جلاد  حماية الطلاء (ppf)| إزالة الانبعاجات  بدون طلاء (pdr) | تظليل (مخفي) | الطلاء الذكي | إصلاح الجنوط (الرنقات) | طلاء السيراميك">
     <link rel="stylesheet" href="./arabic.css">
     <title>Reflection car care</title>
 </head>
@@ -185,7 +185,7 @@
     
         <div class="container">
             <div class="head">
-                <h1>اكثر من  ٢  سنوات من الخبره</h1>
+                <h1> اكثر من <span id="year"></span>   سنوات من الخبره</h1>
             </div>
             <div class="row">
                 
