--- a/services page/tinting/arabic.html
+++ b/services page/tinting/arabic.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../arabic page/arabic.css">
     <link rel="stylesheet" href="./arabic.css">
     <link rel="icon" href="../../sources/images/reflection_logo.webp">
-    <meta name="description" content="Reflection car care in rak | PPF | PDR | tinting | Smart paint | Rim Repair | Ceramic Coating">
+    <meta name="description" content="Reflection car care in rak | Tinting>
     <title>PDR</title>
 </head>
 <body>
