--- a/services page/ppf/arabic.html
+++ b/services page/ppf/arabic.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="../../arabic page/arabic.css">
     <link rel="stylesheet" href="./arabic.css">
     <link rel="icon" href="../../sources/images/reflection_logo.webp">
-    <meta name="description" content="Reflection car care in rak | PPF | PDR | tinting | Smart paint | Rim Repair | Ceramic Coating">
-    <title>PPF</title>
+    <meta name="description" content="Reflection car care in rak | PPF 
 </head>
 <body>
   <div class="home">
