--- a/services page/restore/index.html
+++ b/services page/restore/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="./main.css">
     <link rel="icon" href="../../sources/images/reflection_logo.webp">
-    <meta name="description" content="Reflection car care in rak | PPF | PDR | tinting | Smart paint | Rim Repair | Ceramic Coating">
+    <meta name="description" content="Reflection car care in rak | interior restoring">
     <title>Smart Paint</title>
 </head>
 <body>
